# acacia

./: Cargo.toml  docstrings.md
acacia/: Cargo.toml
acacia/src/: lib.rs
acacia_core/: Cargo.toml
acacia_core/src/: hateoas.rs  lib.rs  route.rs  tw.rs
acacia_db/: Cargo.toml
acacia_db/src/: lib.rs  schema.rs
acacia_macros/: Cargo.toml
acacia_macros/src/: form.rs  html.rs  lib.rs  model.rs  route.rs  tw.rs
acacia_server/: Cargo.toml
acacia_server/src/: lib.rs
examples/todo_app/: Cargo.toml
examples/todo_app/src/: main.rs
