[package]
name = "acacia"
version.workspace = true
edition.workspace = true

[features]
default = []
tailwind = ["acacia_core/tailwind", "acacia_macros/tailwind"]

[dependencies]
acacia_core = { workspace = true }
acacia_macros = { workspace = true }
acacia_db = { workspace = true }
acacia_server = { workspace = true }
axum = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
