[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"

[dependencies]
acacia = { path = "../../acacia" }
acacia_core = { path = "../../acacia_core" }
acacia_db = { path = "../../acacia_db" }
tokio = { workspace = true }
serde = { workspace = true }
sea-orm = { workspace = true }
inventory = { workspace = true }
axum = { workspace = true }
